# textfully-python

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  publish.yml  python.yml
examples/: .env.example  README.md  basic_usage.py  send_text.py
tests/: conftest.py  test_auth.py  test_errors.py  test_exceptions.py  test_send.py  test_validation.py
textfully/: __init__.py  exceptions.py
