[metadata]
name = textfully
version = attr: textfully.version.__version__
description = Textfully Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
author = Textfully
author_email = textfully@gtfol.inc
url = https://github.com/gtfol/textfully-python
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests >=2.25.0

[coverage:run]
source = textfully
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    pass
    raise ImportError
except ImportError:
    raise AssertionError
